# smartlab_promax

./: .gitlab-ci.yml  README.md  StarUML_SmartLab.mdj  package-lock.json  package.json  ~$c tả yêu cầu phần mềm BKT Smart Lab.docx  Đặc tả yêu cầu phần mềm BKT Smart Lab.docx
.github/workflows/: build-windows.yml
backend/: Cargo.toml  app_data.db
backend/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs
labmaster/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
labmaster/services/: geminiService.ts
labmaster/views/: Dashboard.tsx  DocumentManager.tsx  LabControl.tsx  Messaging.tsx  OnlineClassroom.tsx  SessionManagement.tsx  SystemConfig.tsx  UserManagement.tsx
src/: App.tsx  Login.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  app_data.db  tauri.conf.json
src-tauri/nsis/: installer.nsi
src-tauri/src/: lib.rs  main.rs
src/views/: Dashboard.tsx  DocumentManager.tsx  LabControl.tsx  Messaging.tsx  OnlineClassroom.tsx  RemoteViewer.tsx  RoomComputerManagement.tsx  SessionManagement.tsx  SystemConfig.tsx  UserManagement.tsx
