[package]
name = "setup_ip"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "setup_ip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "time", "sync", "rt-multi-thread", "io-util", "process"] }
local-ip-address = "0.6"
futures = "0.3"
surge-ping = "0.8"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.15"
once_cell = "1.19"
ssh2 = "0.9"
dirs = "5"
# Screen capture & remote control
scrap = "0.5"
enigo = "0.2"
image = "0.24"
base64 = "0.21"
# Remote control networking
tokio-tungstenite = "0.21"
futures-util = "0.3"

